Address bar is selected when clicked, and it's left-to-right to solve the problem of weird text alignment on Android

--- a/android-app/app/src/main/assets/css/map.css
+++ b/android-app/app/src/main/assets/css/map.css
@@ -43,3 +43,9 @@ body {
 .selected-stop {
     border: #337ab7 1px solid;
 }
+
+#address {
+    font-family: Arial, FontAwesome;
+    /* this solves weird alignment of long text on Android */
+    direction: ltr
+}
